# flash-email

./: Cargo.toml
src/: main.rs
tests/: health_check.rs
