[package]
name = "flashmail"
version = "0.1.0"
authors = ["Fanon X Rogers"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "flashmail"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.14"